Revisat per CTTI

--- a/content/noticies/2017-09-08-SIC-Nexus3.md
+++ b/content/noticies/2017-09-08-SIC-Nexus3.md
@@ -28,7 +28,10 @@ Les implicacions d'utilitzar aquesta nova versió per al SIC són:
 
 * **Fi de suport a repostoris Maven 1**: El format de repositoris Maven 1 s'ha anat abandonant per tota la comunitat en els darrers anys (com per exemple [Atlassian al 2012](https://www.atlassian.com/blog/archives/shutting-down-maven-1-repositories-on-maven-atlassian-com)). Amb aquesta actualització, el SIC deixa de donar suport a repositoris Maven 1.
 * **Integració de tecnologies Front-End de nova generació**: Amb el suport de repositoris *bower*, juntament amb els de *NPM* que el SIC ja suportava, es pot realitzar la construcció i desplegament de pràcticament qualsevol tipus de tecnologia Front-End.
-* **Els repositoris Maven ja no són navegables per HTML**: Els repositoris al Nexus 3 ja no són navegables com ho eren al Nexus 2. Es pot seguir descarregant els artefactes a partir de la URL d'on es troben, però els llistats de carpetes i directoris ja no són navegables. L'alternativa és accedir directament a l'aplicació web del Nexus (https://hudson.intranet.gencat.cat/nexus/) i navegar a partir de l'opció del menú de l'esquerra *Browse*. Es pot navegar a través *Assets* o *Components* (no cal fer login). D'igual manera, es pot seguir fent cerques d'artefactes a través del buscador a la part superior central de l'aplicació:
+* **Els repositoris Maven ja no són navegables per HTML**: Els repositoris al Nexus 3 ja no són navegables com ho eren al Nexus 2. Es pot seguir descarregant els artefactes a partir de la URL d'on es troben, però les estructures de carpetes de repositoris i grups no són accessibles des del navegador web. L'alternativa és seguir el següent procediment:
+	1. Accedir directament a l'aplicació web del Nexus (https://hudson.intranet.gencat.cat/nexus/). El Nexus 3 no està integrat amb GICAR i per tant no s'ha de fer login. Tindreu accés a tots els repositoris públics de forma anònima.
+	2. Per a navegar, a partir de l'opció del menú de l'esquerra *Browse*. Es pot navegar a través *Assets* o *Components*.
+	3. Per a fer cerques d'artefactes, cal utilitzar el buscador a la part superior central de l'aplicació:
 
 ![Exemple de cerca al Nexus 3](/images/news/SIC-cerca-Nexus3.png "Exemple de cerca al Nexus 3")
 
