--- a/content/noticies/2017-09-08-SIC-Nexus3.md
+++ b/content/noticies/2017-09-08-SIC-Nexus3.md
@@ -1,7 +1,7 @@
 +++
 date        = "2017-09-08"
 title       = "SIC. Actualització a Nexus 3."
-description = "El passat mes d'agost vam incrementar la versió del Nexus de la 2.11 a la 3.2.1 al SIC."
+description = "Aquest mes d'Agost ha estat actualitzat el Nexus del SIC de la versió 2.11 a la 3.2.1. Aquesta actualització dóna suport a nous tipus de repositoris com Bower, gestor de paquets força utilitzat en la construcció de frontends estàtics"
 sections    = ["noticies", "home"]
 categories  = ["sic"]
 key         = "SETEMBRE2017"
