--- a/content/destacats/2017-09-29-canigo3_2_2.md
+++ b/content/destacats/2017-09-29-canigo3_2_2.md
@@ -1,7 +1,7 @@
 +++
 date        = "2017-09-29"
 title       = "Publicació Canigó 3.2.2"
-description = "S'ha publicat la versió 3.2.2 del framework Canigó amb algunes millores i resolució d'incidències"
+description = "S'ha publicat la versió 3.2.2 del framework Canigó amb algunes millores i actualització de llibreries"
 enllac      = "https://cstd.ctti.gencat.cat/jiracstd/browse/CAN/fixforversion/10463"
 sections    = "canigo"
 key         = "OCTUBRE2017"
