--- a/content/comunicat/2017/10.md
+++ b/content/comunicat/2017/10.md
@@ -7,7 +7,7 @@ key 		  	    = "OCTUBRE2017"
 
 [grafica]
 titol      = "SGDE. Evolució peticions al servei d'eFormularis"
-descripcio = "La següent gràfica mostra el consum del servei d'invocació (webservice) d'eFormularis per mes des de Gener 2016"
+descripcio = "Aquest mes de Setembre s'ha assolit un nou màxim de peticions en el webservice d'eFormularis, superant novament el milió"
 imatge     = "eformularis_evolucio_consum.png"
 alt        = "Consum servei invocació d'eFormularis"
 
