--- a/content/comunicat/2017/11.md
+++ b/content/comunicat/2017/11.md
@@ -2,18 +2,18 @@
 title           = "Comunicat"
 date	 	  	    = "2017-11-06"
 nombrenoticies  = 2
-nombredestacats = 2
+nombredestacats = 0
 key 		  	    = "NOVEMBRE2017"
 
 [grafica]
-titol      = "STD. Evolució peticions al servei d'eFormularis"
-descripcio = "Aquest mes de Octubre s'ha assolit un nou màxim de peticions en el webservice de STD, superant les 100.000 peticions"
+titol      = "STD. Evolució peticions al servei"
+descripcio = "El mes d'Octubre s'ha assolit un nou màxim de peticions en el webservice de STD, superant les 100.000 peticions. El principal motiu d'aquest gran increment és l'elevat nombre de còpies autèntiques de documents realitzats pel servei d'eCopia"
 imatge     = "std_evolucio_consum.png"
 alt        = "Consum servei invocació de STD"
 
 [[relacionats]]
-doctitle          = "Ús de Spring Data i QueryDSL en Canigó 3.2"
-docdescription    = "En aquest HowTo s'explica com utilitzar les funcionalitats proporcionades al mòdul de Persistència de Canigó 3.2"
+doctitle          = "Ús de Spring Data i QueryDSL al servei de persistència de Canigó 3.2"
+docdescription    = "En aquest HowTo s'explica com utilitzar les funcionalitats proporcionades al mòdul de Persistència de Canigó 3.2 les quals es recolzen en QueryDSL i Spring Data com a llibreries base"
 docurl            = ""
 doctype           = "HTML"
 
