Afegit link howto

--- a/content/comunicat/2017/11.md
+++ b/content/comunicat/2017/11.md
@@ -14,7 +14,7 @@ alt        = "Consum servei invocació de STD"
 [[relacionats]]
 doctitle          = "Ús de Spring Data i QueryDSL al servei de persistència de Canigó 3.2"
 docdescription    = "En aquest HowTo s'explica com utilitzar les funcionalitats proporcionades al mòdul de Persistència de Canigó 3.2 les quals es recolzen en QueryDSL i Spring Data com a llibreries base"
-docurl            = ""
+docurl            = "/howtos/2017-11-Howto-Us_Servei_Persistence_Canigo/"
 doctype           = "HTML"
 
 +++
