--- a/content/comunicat/2017/12.md
+++ b/content/comunicat/2017/12.md
@@ -12,9 +12,9 @@ imatge     = "git_acumulat_aplicacions.png"
 alt        = "SIC. Acumulat Aplicacions al Git"
 
 [[relacionats]]
-doctitle          = ""
-docdescription    = ""
-docurl            = ""
+doctitle          = "Integració d'una aplicació Canigó a SIC 2.0"
+docdescription    = "En aquest HowTo s'explica com integrar una aplicació Canigó 3.2 amb el SIC 2.0"
+docurl            = "/howtos/2017-12-howto-integracio_canigo_sic/"
 doctype           = "HTML"
 
 +++
