Revisió descripció gràfica

--- a/content/comunicat/2017/12.md
+++ b/content/comunicat/2017/12.md
@@ -7,7 +7,7 @@ key 		  	    = "DESEMBRE2017"
 
 [grafica]
 titol      = "SIC. Acumulat Aplicacions al Git"
-descripcio = "Evolució de les aplicacions que han migrat el seu codi font al Git de SIC"
+descripcio = "Evolució de les aplicacions que tenen custodiat el seu codi font al Git del SIC"
 imatge     = "git_acumulat_aplicacions.png"
 alt        = "SIC. Acumulat Aplicacions al Git"
 
