--- a/content/comunicat/2018/01.md
+++ b/content/comunicat/2018/01.md
@@ -1,6 +1,6 @@
 +++
 title           = "Comunicat"
-date	 	  	    = "2018-01-05"
+date	 	  	    = "2018-01-08"
 nombrenoticies  = 2
 nombredestacats = 1
 key 		  	    = "GENER2018"
@@ -12,9 +12,9 @@ imatge     = ""
 alt        = ""
 
 [[relacionats]]
-doctitle          = ""
-docdescription    = ""
-docurl            = ""
+doctitle          = "Proves Unitàries Mòduls de Canigó"
+docdescription    = "En aquest HowTo s'explica com realitzar proves unitàries de mòduls de Canigó"
+docurl            = "/howtos/2018-01-howto-test_jars_canigo/"
 doctype           = "HTML"
 
 +++
