--- a/content/comunicat/2018/01.md
+++ b/content/comunicat/2018/01.md
@@ -6,14 +6,14 @@ nombredestacats = 1
 key 		  	    = "GENER2018"
 
 [grafica]
-titol      = ""
-descripcio = ""
-imatge     = ""
-alt        = ""
+titol      = "SIC. Acumulat Aplicacions al Git"
+descripcio = "Evolució de les aplicacions que tenen custodiat el seu codi font al Git del SIC"
+imatge     = "git_acumulat_aplicacions.png"
+alt        = "SIC. Acumulat Aplicacions al Git"
 
 [[relacionats]]
-doctitle          = "Proves Unitàries Mòduls de Canigó"
-docdescription    = "En aquest HowTo s'explica com realitzar proves unitàries de mòduls de Canigó"
+doctitle          = "Test unitàris integrats als serveis de Canigó 3.2"
+docdescription    = "En aquest HowTo s'explica com utilitzar els test-jars publicats pels serveis core de Canigó 3.2"
 docurl            = "/howtos/2018-01-howto-test_jars_canigo/"
 doctype           = "HTML"
 
