--- a/content/comunicat/2018/02.md
+++ b/content/comunicat/2018/02.md
@@ -7,13 +7,13 @@ key 		  	    = "FEBRER2018"
 
 [grafica]
 titol      = "SGDE. Nombre de peticions eFormularis"
-descripcio = "Aquest mes de gener el servei d'eFormularis ha tornar a registrar més d'un milió de peticions."
+descripcio = "Aquest mes de gener el servei d'eFormularis ha tornar a registrar més d'un milió de peticions"
 imatge     = "eformularis_total_peticions.png"
 alt        = "SGDE. Nombre de peticions eFormularis"
 
 [[relacionats]]
-doctitle          = "Generació de joc de proves per a peticions REST a SOAP-UI amb Swagger"
-docdescription    = "En aquest HowTo s'explica com generar un joc de proves per a peticions REST a SOAP-UI amb Swagger"
+doctitle          = "Generació joc de proves SOAP-UI per a API REST desenvolupada amb Canigó"
+docdescription    = "En aquest HowTo s'explica com generar un joc de proves SOAP-UI per a una API REST desenvolupada amb Canigó mitjançant Swagger"
 docurl            = "/howtos/2018-02-howto-swagger_soapui/"
 doctype           = "HTML"
 
