Correcció del nom del mes a la gràfica

--- a/content/comunicat/2018/02.md
+++ b/content/comunicat/2018/02.md
@@ -7,7 +7,7 @@ key 		  	    = "FEBRER2018"
 
 [grafica]
 titol      = "SGDE. Nombre de peticions eFormularis"
-descripcio = "Aquest mes de gener el servei d'eFormularis ha tornar a registrar més d'un milió de peticions"
+descripcio = "Aquest mes de Gener el servei d'eFormularis ha tornar a registrar més d'un milió de peticions"
 imatge     = "eformularis_total_peticions.png"
 alt        = "SGDE. Nombre de peticions eFormularis"
 
