--- a/content/comunicat/2018/04.md
+++ b/content/comunicat/2018/04.md
@@ -6,9 +6,9 @@ nombredestacats   = 2
 key               = "ABRIL2018"
 
 [[relacionats]]
-doctitle          = "Generació joc de proves SOAP-UI per a API REST desenvolupada amb Canigó"
-docdescription    = "En aquest HowTo s'explica com generar un joc de proves SOAP-UI per a una API REST desenvolupada amb Canigó mitjançant Swagger"
-docurl            = "/howtos/2018-02-howto-swagger_soapui/"
+doctitle          = "Ús de propietats Multientorn al Front-End d'una aplicació Canigó"
+docdescription    = "En aquest HowTo s'explica com utilitzar les propietats Multientorn al Front-End d'una aplicació Canigó"
+docurl            = "/howtos/2018-04-howto-frontend-multientorn/"
 doctype           = "HTML"
 
 +++
