--- a/content/comunicat/2018/04.md
+++ b/content/comunicat/2018/04.md
@@ -5,6 +5,12 @@ nombrenoticies    = 2
 nombredestacats   = 1
 key               = "ABRIL2018"
 
+[grafica]
+titol      = "STD. Evolució peticions al servei"
+descripcio = "El mes d'Octubre s'ha assolit un nou màxim de peticions en el webservice de STD, superant les 100.000 peticions. El principal motiu d'aquest gran increment és l'elevat nombre de còpies autèntiques de documents realitzats pel servei d'eCopia"
+imatge     = "std_evolucio_consum.png"
+alt        = "Consum servei invocació de STD"
+
 [[relacionats]]
 doctitle          = "Ús de propietats Multientorn al Front-End d'una aplicació Canigó"
 docdescription    = "En aquest HowTo s'explica com utilitzar les propietats Multientorn al Front-End d'una aplicació Canigó"
