Eliminem informació sobre qui ha fet més peticions de la gràfica

--- a/content/comunicat/2018/04.md
+++ b/content/comunicat/2018/04.md
@@ -7,7 +7,7 @@ key               = "ABRIL2018"
 
 [grafica]
 titol      = "STD. Evolució peticions al servei"
-descripcio = "Al mes de Març s'ha assolit un nou màxim de peticions en el webservice de STD, superant les 200.000 peticions. El principal motiu d'aquest gran increment és l'elevat nombre de còpies autèntiques de documents realitzats pel servei d'eCopia i l'augment de peticions del servei Autoescoles"
+descripcio = "Al mes de Març s'ha assolit un nou màxim de peticions en el webservice de STD, superant les 200.000 peticions."
 imatge     = "std_evolucio_consum.png"
 alt        = "Consum servei invocació de STD"
 
