Eliminem la referencia a bústia sic.ctti i la substituim per un link a obrir peticions Remedy al SIC

--- a/content/noticies/2015-03-05-SIC-PHP.md
+++ b/content/noticies/2015-03-05-SIC-PHP.md
@@ -19,5 +19,5 @@ A continuació es mostra un diagrama amb el funcionament global del SIC per apli
 
 Comentar que en el roadmap del SIC està l'execució de scripts SQL/PLSQL en MySQL donada la seva presencia en el stack LAMP (Linux - Apache HTTP Server - MySQL- PHP).
 
-Per qualsevol dubte referent a la integració d'aplicacions PHP al SIC podeu fer una petició de consulta al servei [SICQ] (https://cstd.ctti.gencat.cat/jiracstd/browse/SICQ) al JIRA CSTD o adreçar-vos a la bústia <a href="mailto://sic.ctti@gencat.cat">sic.ctti@gencat.cat</a>.
+Per qualsevol dubte referent a la integració d'aplicacions PHP al SIC podeu fer una petició de consulta al servei [SICQ] (https://cstd.ctti.gencat.cat/jiracstd/browse/SICQ) al JIRA CSTD o [s'ha d'obrir una petició Remedy de consulta al SIC](http://canigo.ctti.gencat.cat/howtos/2018-01-howto-obrir-peticions-SIC-a-autoservei-Remedy/#consulta).
 
