--- a/content/comunicat/2018/05.md
+++ b/content/comunicat/2018/05.md
@@ -8,7 +8,7 @@ key               = "MAIG2018"
 [grafica]
 titol      = "Suport Cloud. Evolució aplicacions al Cloud"
 descripcio = "Evolució de les aplicacions desplegades al Cloud, ja sigui al públic (Azure, Bluemix) com a plataformes de contenidors on-premise (AppAgile, SwarmMe)"
-imatge     = ""
+imatge     = "evolucio_apps_cloud_x_dept.png"
 alt        = "Evolució aplicacions al Cloud"
 
 +++
