--- a/content/comunicat/2018/06.md
+++ b/content/comunicat/2018/06.md
@@ -6,9 +6,9 @@ nombredestacats   = 2
 key               = "JUNY2018"
 
 [[relacionats]]
-doctitle          = "Exemple Autoservei pipeline amb aplicació Canigó 3.2 desplegada a IBM Bluemix"
+doctitle          = "Exemple Autoservei pipeline amb aplicació Canigó 3.2.4 desplegada a IBM Bluemix"
 docdescription    = "En aquest HowTo s'explica com configurar un descriptor yaml de l'Autoservei de pipelines per desplegar una aplicació Canigó 3.2 al cloud públic IBM Bluemix"
-docurl            = "TODO"
+docurl            = "/howtos/2018-05-SIC-Autoservei-jobs-pipeline"
 doctype           = "HTML"
 
 +++
