--- a/content/comunicat/2018/07.md
+++ b/content/comunicat/2018/07.md
@@ -7,6 +7,6 @@ key               = "JULIOL2018"
 
 [[relacionats]]
 doctitle          = "HowTo integració aplicació demo Canigó 3.2.5 amb GICAR"
-docdescription    = "En aquest HowTo s'explica pas a pas com integrar una aplicació Canigó amb GICAR gràcies al suport a SAML2 introduït a la versió 3.2.5"
+docdescription    = "En aquest HowTo s'explica pas a pas com integrar una aplicació Canigó amb GICAR a l'entorn de desenvolupament gràcies al suport a SAML2 introduït a la versió 3.2.5 del framework"
 doctype           = "HTML"
 +++
