--- a/content/comunicat/2018/07.md
+++ b/content/comunicat/2018/07.md
@@ -8,7 +8,6 @@ key               = "JULIOL2018"
 [grafica]
 titol      = "STD. Evolució peticions al servei"
 descripcio = "L'evolució de peticions al servei ha anat creixent fins a estabilitzar-se els últims mesos al voltant de les 200.000"
-imatge     = "evolucio_peticions_std.png"
+imatge     = "evolucio-peticions-std.png"
 alt        = "Evolució peticions al Cloud"
-
 +++
