--- a/content/comunicat/2018/08.md
+++ b/content/comunicat/2018/08.md
@@ -1,5 +1,5 @@
 +++
 title             = "Comunicat"
 date              = "2018-08-01"
-nombredestacats   = 2
+nombrenoticies    = 2
 key               = "AGOST2018"
