--- a/content/comunicat/2018/08.md
+++ b/content/comunicat/2018/08.md
@@ -2,5 +2,6 @@
 title             = "Comunicat"
 date              = "2018-08-01"
 nombrenoticies    = 2
+nombredestacats   = 0
 key               = "AGOST2018"
 +++
