--- a/content/comunicat/2018/08.md
+++ b/content/comunicat/2018/08.md
@@ -8,6 +8,6 @@ key               = "AGOST2018"
 [[relacionats]]
 doctitle          = "HowTo integració aplicació demo Canigó 3.2.5 amb GICAR"
 docdescription    = "En aquest HowTo s'explica pas a pas com integrar una aplicació Canigó amb GICAR a l'entorn de desenvolupament gràcies al suport a SAML2 introduït a la versió 3.2.5 del framework"
-docurl            = "/howtos/2018-08-Canigo-SAML.md/" 
+docurl            = "/howtos/2018-08-Canigo-SAML/" 
 doctype           = "HTML"
 +++
