--- a/content/comunicat/2018/08.md
+++ b/content/comunicat/2018/08.md
@@ -5,6 +5,12 @@ nombrenoticies    = 2
 nombredestacats   = 1
 key               = "AGOST2018"
 
+[grafica]
+titol      = "Evolució aplicacions Canigó"
+descripcio = "A continuació es mostra l'evolució d'aplicacions Canigó durant el darrer any, entenent per aplicacions Canigó els projectes Maven que inclouen el core del framework. Dins d'un mateix codi de diàleg poden haver-hi diverses aplicacions Canigó"
+imatge     = "evolucio-apps-canigo.png"
+alt        = "Evolució aplicacions Canigó"
+
 [[relacionats]]
 doctitle          = "HowTo integració aplicació demo Canigó 3.2.5 amb GICAR"
 docdescription    = "En aquest HowTo s'explica pas a pas com integrar una aplicació Canigó amb GICAR a l'entorn de desenvolupament gràcies al suport a SAML2 introduït a la versió 3.2.5 del framework"
