--- a/content/comunicat/2018/09.md
+++ b/content/comunicat/2018/09.md
@@ -1,1 +1,13 @@
++++
+title             = "Comunicat"
+date              = "2018-09-01"
+nombrenoticies    = 2
+nombredestacats   = 2
+key               = "SETEMBRE2018"
 
+[[relacionats]]
+doctitle          = "HowTo Transmissió de binaris en REST API a Canigó 3.2"
+docdescription    = "En aquest HowTo es descriu un exemple pràctic de transmissió de binaris en REST API a Canigó 3.2 seguint les millors pràctiques definides pel CS Canigó"
+docurl            = "/drafts/2018-08-Howto-Transmissio-binaris-REST-API/"
+doctype           = "HTML"
++++
