--- a/content/comunicat/2018/10.md
+++ b/content/comunicat/2018/10.md
@@ -8,6 +8,6 @@ key               = "OCTUBRE2018"
 [[relacionats]]
 doctitle          = "HowTo Actualització Canigó 3.2.5 a 3.2.6"
 docdescription    = "En aquest HowTo es descriu com actualitzar una aplicació Canigó 3.2.5 a 3.2.6"
-docurl            = "/drafts/howto-canigo-3.2.5-3.2.6.md/"
+docurl            = "/drafts/howto-canigo-3.2.5-3.2.6/"
 doctype           = "HTML"
 +++
