--- a/content/comunicat/2018/10.md
+++ b/content/comunicat/2018/10.md
@@ -1,13 +1,13 @@
 +++
 title             = "Comunicat"
 date              = "2018-09-26"
-nombrenoticies    = 1
+nombrenoticies    = 2
 nombredestacats   = 2
 key               = "OCTUBRE2018"
 
 [[relacionats]]
-doctitle          = "HowTo Actualització Canigó 3.2.5 a 3.2.6"
-docdescription    = "En aquest HowTo es descriu com actualitzar una aplicació Canigó 3.2.5 a 3.2.6"
-docurl            = "/drafts/howto-canigo-3.2.5-3.2.6/"
+doctitle          = "HowTo utilització de MongoDB"
+docdescription    = "En aquest HowTo es descriu detalladament la configuració i ús de MongoDB amb Canigó"
+docurl            = "/drafts/modul-mongodb/"
 doctype           = "HTML"
 +++
