--- a/content/comunicat/2018/10.md
+++ b/content/comunicat/2018/10.md
@@ -6,8 +6,8 @@ nombredestacats   = 2
 key               = "OCTUBRE2018"
 
 [[relacionats]]
-doctitle          = "HowTo utilització nou mòdul canigo.persistence.mongodb a Canigó 3.2.6"
-docdescription    = "En aquest HowTo es descriu detalladament la configuració i ús de MongoDB amb Canigó 3.2.6"
+doctitle          = "Documentació nou mòdul canigo.persistence.mongodb"
+docdescription    = "Documentació de referència on es descriu detalladament la configuració i ús de MongoDB amb Canigó 3.2.6"
 docurl            = "/drafts/modul-mongodb/"
 doctype           = "HTML"
 +++
