--- a/content/comunicat/2018/10.md
+++ b/content/comunicat/2018/10.md
@@ -6,8 +6,8 @@ nombredestacats   = 2
 key               = "OCTUBRE2018"
 
 [[relacionats]]
-doctitle          = "Documentació nou mòdul canigo.persistence.mongodb"
-docdescription    = "Documentació de referència on es descriu detalladament la configuració i ús de MongoDB amb Canigó 3.2.6"
-docurl            = "/drafts/modul-mongodb/"
+doctitle          = "HowTo Ús nou mòdul MongoDB a Canigó 3.2.6"
+docdescription    = "HowTo on es descriu amb detall la configuració i ús del nou mòdul de MongoDB a Canigó 3.2.6"
+docurl            = "/howtos/2018-09-Howto-MongoDB/"
 doctype           = "HTML"
 +++
