--- a/content/drafts/2018-10-10-Canigo3-Java8.md
+++ b/content/drafts/2018-10-10-Canigo3-Java8.md
@@ -1,23 +1,27 @@
 +++
 date        = "2018-10-10"
-title       = "Guia migració Canigó 3 a Java 8"
-description = "Guia per migrar aplicacions en Canigó 3 de Java 7 a Java 8"
-sections    = ["Notícies"]
+title       = "Migració Canigó 3 de Java 7 a Java 8"
+description = "En aquest HowTo es donen unes pautes per migrar aplicacions Canigó 3 de Java 7 a Java 8"
+sections    = ["howtos"]
 categories  = ["canigo"]
-key         = "OCTUBRE2018"
+key         = "NOVEMBRE2018"
 +++
 
-## Introducció
+## Audiència
 
-Els canvis "grans" de versions de Java acostumen a implicar canvis e inconsistències que impacten en les aplicacions, implicant problemes e imprevistos en els projectes de migració i actualització.
+Aquest how-to va dirigit principalment al personal tècnic (desenvolupadors i arquitectes) que vulguin actualitzar la versió de Java 7 a 8 en una aplicació Canigó 3.
 
-L'objectiu d'aquesta guia és doncs, informar dels canvis produïts en la nova versió de Java 8, i facilitar la migració de les aplicacions de Canigó 3 a aquesta nova versió de Java.
+## Context
+
+Els canvis "grans" de versions de Java acostumen a implicar canvis en les aplicacions. L'objectiu d'aquesta guia és facilitar la migració a Java 8 de les aplicacions Canigó 3 que facin servir encara Java 7.
 
 ## Canigó 3
 
-La versió de Canigó 3.0.4-SNAPSHOT (publicada el setembre de 2014 aprox.) va introduïr la versió 4 de Spring, la qual suporta _out-of-the-box_ Java 8 sense donar problemes. Les versions prèvies de Spring pateixen problemes quan s'executen amb Java 8.
+La versió de Canigó 3.1.0 publicada a finals de 2014 va introduir la versió 4 de Spring, la qual suporta _out-of-the-box_ Java 8. Per aquest motiu, les aplicacions que funcionin amb una versió de Canigó igual o posterior a la 3.1.0 no patiran problemes amb Java 8.
 
-Per aquest motiu, les aplicacions que funcionen amb una versió de Canigó igual o posterior a la 3.0.4-SNAPSHOT no patiran problemes amb Spring quan es canvii a la versió 8 de Java.
+Per aplicacions Canigó 3.0.x, es recomana actualitzar a Canigó 3.1 seguint aquesta [guia](https://canigo.ctti.gencat.cat/noticies/2016-05-28-Canigo-Proces-actualitzacio-a-Canigo-3_1/).
+
+A continuació s'especifica el canvi a realitzar al codi de l'aplicació Canigó 3.1/3.2 per forçar que les classes generades siguin Java 8 compatibles, impedint el desplegament en servidors d'aplicacions que corrin en versions anteriors de Java. 
 
 ### pom.xml
 
@@ -46,7 +50,7 @@ per
 
 ## Canvis a Java 8
 
-A continuació es presenta un llistat de canvis introduïts a la nova versió de Java que poden afectar les aplicacions que funcionaven amb la versió 7 de Java.
+A continuació es presenta un llistat de canvis introduïts a la versió 8 de Java que poden afectar a les aplicacions que funcionaven amb la versió 7, i en funció de les quals s'hauria de revisar el codi.
 
 ### DateFormat i SimpleDateFormat
 
@@ -86,10 +90,10 @@ La selecció del proveïdor de XML pot donar problemes, seleccionant per defecte
 * _Warnings_ produïts en la compilació amb Java 7 pot generar _Errors_ amb la nova versió de Java.
 * El tractament de genèrics s'ha fet més restrictiu i pot implicar problemes de compilació
 * java.awt : La gestió de tecles pot donar problemes.
-* Nashorn javascript engine: El motor de Javascript "Rhino" s'ha canviat pel nou motor "Nashorn", i en el cas que l'aplicació faci ús del motor "Rhino" s'haurà d'accedir a l'enllaç [2] de l'apartat _Informació adicional_ per corregir els canvis indicats.
+* Nashorn javascript engine: El motor de Javascript "Rhino" s'ha canviat pel nou motor "Nashorn", i en el cas que l'aplicació faci ús del motor "Rhino" s'haurà d'accedir a l'enllaç [2] de l'apartat _Informació addicional_ per corregir els canvis indicats.
 * java.net.DatagramPacket ha canviat la signatura d'un constructor, i pot implicar que el codi no compili.
 
-## Informació adicional
+## Informació addicional
 
 1. https://www.oracle.com/technetwork/java/javase/8-compatibility-guide-2156366.html
 2. https://wiki.openjdk.java.net/display/Nashorn/Rhino+Migration+Guide
