Revisió text howto

--- a/content/comunicat/2018/11.md
+++ b/content/comunicat/2018/11.md
@@ -6,8 +6,8 @@ nombredestacats   = 1
 key               = "NOVEMBRE2018"
 
 [[relacionats]]
-doctitle          = "HowTo Ús de Git i "
-docdescription    = "HowTo on es descriu amb detall la configuració i ús del nou mòdul de MongoDB a Canigó 3.2.6"
-docurl            = "/howtos/2018-10-Howto-Metodologia-us-Git-SIC/"
+doctitle          = "HowTo Ús de GitFlow en el desenvolupament d'aplicacions a la Generalitat"
+docdescription    = "HowTo on es descriu com utilitzar GitFlow en desenvolupament d'aplicacions en el context de la Generalitat"
+docurl            = "/howtos/2018-10-Howto-Gitflow-desenvolupament-SIC/"
 doctype           = "HTML"
 +++
