--- a/content/comunicat/2018/11.md
+++ b/content/comunicat/2018/11.md
@@ -6,8 +6,8 @@ nombredestacats   = 1
 key               = "NOVEMBRE2018"
 
 [[relacionats]]
-doctitle          = "HowTo Ús de GitFlow en el desenvolupament d'aplicacions a la Generalitat"
-docdescription    = "HowTo on es descriu com utilitzar GitFlow en desenvolupament d'aplicacions en el context de la Generalitat"
-docurl            = "/howtos/2018-10-Howto-Gitflow-desenvolupament-SIC/"
+doctitle          = "HowTo Com actualitzar de Java 7 a Java 8 en aplicacions Canigó 3"
+docdescription    = "HowTo on es descriu com s'hauria de fer el canvi de Java 7 a Java 8 en aplicacions Canigó 3"
+docurl            = "/howtos/2018-10-10-HowTo-Canigo-Java8/"
 doctype           = "HTML"
 +++
