--- a/content/blog/2018/11/201812SDWAN.md
+++ b/content/blog/2018/11/201812SDWAN.md
@@ -14,7 +14,7 @@ key         = "NOVEMBRE2018"
 
 Per poder entendre millor la tecnologia SD-WAN, cal que fem una ullada al que implica el SDN (xarxes definides per software).
 I si per definir les xarxes dins d’un CPD utilitzen SDN, per què no fer el mateix amb les connexions WAN ?  D’aquí sorgeix SD-WAN.
-Podem definir SD-WAN com una tecnologia que ens permetrà poder connectar les nostres seus, utilitzant xarxes definides per software, podent determinar així la manera més eficient i eficaç de enrutar el tràfic entre aquests. 
+Podem definir SD-WAN com una tecnologia que ens permetrà poder connectar les nostres seus, utilitzant xarxes definides per software, podent determinar així la manera més eficient i eficaç de enrutar el tràfic entre aquests.
 Com en el cas de SDN, SD-WAN ens permet separar el pla de control del pla de dades, amb els avantatges que això implica, gestió centralitzada, automatització, etc.
 
 ## D’on sorgeix la necessitat
@@ -22,15 +22,15 @@ Com en el cas de SDN, SD-WAN ens permet separar el pla de control del pla de dad
 Estem en una època en què l’adaptació a les noves necessitats d’una forma ràpida i senzilla és fonamental perquè el nostre negoci prosperi.
 Un dels factors principals que mai hem d’oblidar és el de la seguretat, essencial per a poder protegir-nos de la gran infinitat d’atacs als que podem estar sotmesos cada dia.
 **Hem de aconseguir ser ràpids, eficients , segurs i tot a un preu raonable.**
-I just en aquest punt és on apareix una tecnologia, SD-WAN, que ens pot arribar a cobrir les nostres necessitats pel que fa a la connectivitat de les nostres seus. 
+I just en aquest punt és on apareix una tecnologia, SD-WAN, que ens pot arribar a cobrir les nostres necessitats pel que fa a la connectivitat de les nostres seus.
 
 ## Principals característiques d’una xarxa SD-WAN
 
 Tot i que al tractar-se d’una tecnologia, les característiques de la xarxa SD-WAN que configurem dependran directament del fabricant escollit, sí que hi ha un seguit de característiques genèriques que tota xarxa SD-WAN hauria de complir. Aquestes característiques són les següents:
--	**Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.
--	**Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.
--	**Aprovisionament automàtic (“Zero Touch Provisioning”).** Ha de ser possible poder aprovisionar/ connectar una nova seu de forma automàtica i centralitzada. Això ens dona una gran flexibilitat i velocitat en el moment de connectar noves seus a la nostra organització, sense necessitat d’estar desplaçant personal constantment.
--	**Diferents serveis en un únic dispositiu.**  Està clar que en l’actualitat ja tenim dispositius que poden realitzar cadascuna de les funcions que hem descrit anteriorment. Un dels avantatges de SD-WAN és el fet que aquestes funcions es centrin en únic dispositiu, permetent-nos així simplificar molt l’administració / gestió, poder resoldre més àgilment possibles problemes , poder automatitzar més tasques i sobretot baixar els costos.
+*	**Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.
+*	**Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.
+*	**Aprovisionament automàtic (“Zero Touch Provisioning”).** Ha de ser possible poder aprovisionar/ connectar una nova seu de forma automàtica i centralitzada. Això ens dona una gran flexibilitat i velocitat en el moment de connectar noves seus a la nostra organització, sense necessitat d’estar desplaçant personal constantment.
+*	**Diferents serveis en un únic dispositiu.**  Està clar que en l’actualitat ja tenim dispositius que poden realitzar cadascuna de les funcions que hem descrit anteriorment. Un dels avantatges de SD-WAN és el fet que aquestes funcions es centrin en únic dispositiu, permetent-nos així simplificar molt l’administració / gestió, poder resoldre més àgilment possibles problemes , poder automatitzar més tasques i sobretot baixar els costos.
 
 
 ![Imatge centralització funcions](/images/bloc/2018/12/sdwan1.jpg)
