--- a/content/blog/2018/11/201812SDWAN.md
+++ b/content/blog/2018/11/201812SDWAN.md
@@ -33,10 +33,10 @@ I just en aquest punt és on apareix una tecnologia, SD-WAN, que ens pot arribar
 ## Principals característiques d’una xarxa SD-WAN
 
 Tot i que al tractar-se d’una tecnologia, les característiques de la xarxa SD-WAN que configurem dependran directament del fabricant escollit, sí que hi ha un seguit de característiques genèriques que tota xarxa SD-WAN hauria de complir. Aquestes característiques són les següents:  
--	**Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.  
--	**Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.  
--	**Aprovisionament automàtic (“Zero Touch Provisioning”).** Ha de ser possible poder aprovisionar/ connectar una nova seu de forma automàtica i centralitzada. Això ens dona una gran flexibilitat i velocitat en el moment de connectar noves seus a la nostra organització, sense necessitat d’estar desplaçant personal constantment.  
--	**Diferents serveis en un únic dispositiu.**  Està clar que en l’actualitat ja tenim dispositius que poden realitzar cadascuna de les funcions que hem descrit anteriorment. Un dels avantatges de SD-WAN és el fet que aquestes funcions es centrin en únic dispositiu, permetent-nos així simplificar molt l’administració / gestió, poder resoldre més àgilment possibles problemes , poder automatitzar més tasques i sobretot baixar els costos.  
+*	**Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.  
+*	**Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.  
+*	**Aprovisionament automàtic (“Zero Touch Provisioning”).** Ha de ser possible poder aprovisionar/ connectar una nova seu de forma automàtica i centralitzada. Això ens dona una gran flexibilitat i velocitat en el moment de connectar noves seus a la nostra organització, sense necessitat d’estar desplaçant personal constantment.  
+*	**Diferents serveis en un únic dispositiu.**  Està clar que en l’actualitat ja tenim dispositius que poden realitzar cadascuna de les funcions que hem descrit anteriorment. Un dels avantatges de SD-WAN és el fet que aquestes funcions es centrin en únic dispositiu, permetent-nos així simplificar molt l’administració / gestió, poder resoldre més àgilment possibles problemes , poder automatitzar més tasques i sobretot baixar els costos.  
 
 
 ![Imatge centralització funcions](/images/bloc/2018/12/sdwan1.jpg)
@@ -44,12 +44,12 @@ Tot i que al tractar-se d’una tecnologia, les característiques de la xarxa SD
 ## Beneficis que podem obtenir
 
 Els beneficis que podem obtenir amb SD-WAN són:  
-- **Flexibilitat / agilitat.** En tot moment podem adaptar les connexions (ampliació, creació de noves) entre les seus a les nostres necessitats.  
-- **Optimització/ disponibilitat.** Es podrà determinar en cada instant, de forma automàtica,  quin és el millor camí per a comunicar les seus, poden utilitzar els dos alhora.  
-- **Seguretat.** Podrem fer arribar la seguretat fins a l’entrada/sortida de la pròpia seu.  
-- **Visibilitat.** Podrem tenir un control centralitzat de tot el que esta passant en la comunicació entre les diferents seus.  
-- **Administració centralitzada.** L’administració / gestió de la connectivitat (amb les funcions incloses en aquesta, com potser el cas de la seguretat) de les seus es podrà realitzar  des de un únic punt.   
-- **Estalvi en els costos.** Tot i l’estalvi que impliquen els punts anteriors, podríem determinar canviar el tipus de connexió contractat actualment per un altre de més baix cost, és a dir, podem determinar que ja no hi ha  necessitat de contractar línies punt a punt, ni treballar amb tecnologia MPLS, sinó que connectarem les nostres seus mitjançant Internet, o utilitzar també les connexions internet que ja tenim per poder comunicar les seus a part de les línies dedicades.  
+* **Flexibilitat / agilitat.** En tot moment podem adaptar les connexions (ampliació, creació de noves) entre les seus a les nostres necessitats.  
+* **Optimització/ disponibilitat.** Es podrà determinar en cada instant, de forma automàtica,  quin és el millor camí per a comunicar les seus, poden utilitzar els dos alhora.  
+* **Seguretat.** Podrem fer arribar la seguretat fins a l’entrada/sortida de la pròpia seu.  
+* **Visibilitat.** Podrem tenir un control centralitzat de tot el que esta passant en la comunicació entre les diferents seus.  
+* **Administració centralitzada.** L’administració / gestió de la connectivitat (amb les funcions incloses en aquesta, com potser el cas de la seguretat) de les seus es podrà realitzar  des de un únic punt.   
+* **Estalvi en els costos.** Tot i l’estalvi que impliquen els punts anteriors, podríem determinar canviar el tipus de connexió contractat actualment per un altre de més baix cost, és a dir, podem determinar que ja no hi ha  necessitat de contractar línies punt a punt, ni treballar amb tecnologia MPLS, sinó que connectarem les nostres seus mitjançant Internet, o utilitzar també les connexions internet que ja tenim per poder comunicar les seus a part de les línies dedicades.  
 
 ![Imatge centralització connexions](/images/bloc/2018/12/sdwan2.jpg)
 
