--- a/content/blog/2018/11/201812SDWAN.md
+++ b/content/blog/2018/11/201812SDWAN.md
@@ -33,13 +33,14 @@ I just en aquest punt és on apareix una tecnologia, SD-WAN, que ens pot arribar
 ## Principals característiques d’una xarxa SD-WAN
 
 Tot i que al tractar-se d’una tecnologia, les característiques de la xarxa SD-WAN que configurem dependran directament del fabricant escollit, sí que hi ha un seguit de característiques genèriques que tota xarxa SD-WAN hauria de complir. Aquestes característiques són les següents:  
-- **Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.  
-- **Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.  
-  
 
 - Temporitzadors / tasques programades
 
 - Cues
+
+- **Gestió centralitzada.** Tots els dispositius que formin part de la xarxa SD-WAN han de poder-se gestionar / administrar des d’un únic punt. Això ens ha de permetre poder crear plantilles amb les que configurar d’una forma fàcil i ràpida molts dispositius alhora. És important poder disposar d’APIs que ens permetin poder integrar-nos en altres solucions i ajudar-nos en l’automatització de tasques.
+
+- **Gestió/utilització “activa”  les línies connectades a una mateixa seu.** Si en la nostra organització tenim seus amb més d’una línia per connectar-se, per exemple, a la seu central, hauríem de ser capaços de  poder aplicar funcions sobre aquestes ( balanceig, QoS, acceleració de tràfic, etc.) de tal forma que poguéssim aprofitar activament totes les connexions, és a dir, les dues o més línies haurien d’estar treballant conjuntament, alhora.
 
 - **Aprovisionament automàtic (“Zero Touch Provisioning”).** Ha de ser possible poder aprovisionar/ connectar una nova seu de forma automàtica i centralitzada. Això ens dona una gran flexibilitat i velocitat en el moment de connectar noves seus a la nostra organització, sense necessitat d’estar desplaçant personal constantment.
 
@@ -51,12 +52,19 @@ Tot i que al tractar-se d’una tecnologia, les característiques de la xarxa SD
 ## Beneficis que podem obtenir
 
 Els beneficis que podem obtenir amb SD-WAN són:  
-* **Flexibilitat / agilitat.** En tot moment podem adaptar les connexions (ampliació, creació de noves) entre les seus a les nostres necessitats.  
-* **Optimització/ disponibilitat.** Es podrà determinar en cada instant, de forma automàtica,  quin és el millor camí per a comunicar les seus, poden utilitzar els dos alhora.  
-* **Seguretat.** Podrem fer arribar la seguretat fins a l’entrada/sortida de la pròpia seu.  
-* **Visibilitat.** Podrem tenir un control centralitzat de tot el que esta passant en la comunicació entre les diferents seus.  
-* **Administració centralitzada.** L’administració / gestió de la connectivitat (amb les funcions incloses en aquesta, com potser el cas de la seguretat) de les seus es podrà realitzar  des de un únic punt.   
-* **Estalvi en els costos.** Tot i l’estalvi que impliquen els punts anteriors, podríem determinar canviar el tipus de connexió contractat actualment per un altre de més baix cost, és a dir, podem determinar que ja no hi ha  necessitat de contractar línies punt a punt, ni treballar amb tecnologia MPLS, sinó que connectarem les nostres seus mitjançant Internet, o utilitzar també les connexions internet que ja tenim per poder comunicar les seus a part de les línies dedicades.  
+
+- **Flexibilitat / agilitat.** En tot moment podem adaptar les connexions (ampliació, creació de noves) entre les seus a les nostres necessitats.
+
+- **Optimització/ disponibilitat.** Es podrà determinar en cada instant, de forma automàtica,  quin és el millor camí per a comunicar les seus, poden utilitzar els dos alhora.
+
+- **Seguretat.** Podrem fer arribar la seguretat fins a l’entrada/sortida de la pròpia seu.
+
+- **Visibilitat.** Podrem tenir un control centralitzat de tot el que esta passant en la comunicació entre les diferents seus.
+
+- **Administració centralitzada.** L’administració / gestió de la connectivitat (amb les funcions incloses en aquesta, com potser el cas de la seguretat) de les seus es podrà realitzar  des de un únic punt.
+
+- **Estalvi en els costos.** Tot i l’estalvi que impliquen els punts anteriors, podríem determinar canviar el tipus de connexió contractat actualment per un altre de més baix cost, és a dir, podem determinar que ja no hi ha  necessitat de contractar línies punt a punt, ni treballar amb tecnologia MPLS, sinó que connectarem les nostres seus mitjançant Internet, o utilitzar també les connexions internet que ja tenim per poder comunicar les seus a part de les línies dedicades.
+
 
 ![Imatge centralització connexions](/images/bloc/2018/12/sdwan2.jpg)
 
@@ -65,24 +73,37 @@ A part dels beneficis descrits anteriorment, cal fer especial atenció a  les pr
 ## Tipus, aproximacions a la tecnologia SD-WAN  
 
 Segons “la naturalesa del negoci“ del fabricant, ens podem trobar amb varies aproximacions, fabricants que:  
-- Prioritzin el Routing (balanceig, acceleració,...)  
-- Prioritzin la Seguretat  
-- Es vulguin apropar al màxim als sistemes de Informació / usuaris  
-- Prioritzin la convergència amb la LAN  
-- Tinguin una visió dirigida més a grans operadors  
+
+- Prioritzin el Routing (balanceig, acceleració,...).
+
+- Prioritzin la Seguretat.
+
+- Es vulguin apropar al màxim als sistemes de Informació / usuaris.
+
+- Prioritzin la convergència amb la LAN.
+
+- Tinguin una visió dirigida més a grans operadors.  
+
 Cada fabricant, disposa de dispositius / software SD-WAN on preval les seves prioritats. Això no vol dir que no disposin d’altres funcionalitats, però si més no, estan especialitzats en les pròpies..   
 Tenint present els diferents tipus /aproximacions de SD-WAN que hi ha en el mercat, una mostra són les anomenades anteriorment, la següent qüestió que se’ns planteja és: Quin tipus de SD-WAN hauria d’aplicar a la meva empresa?  
 
 ## Quin tipus de SD-WAN hauria d’aplicar a la meva empresa  
 És important tenir present que una determinada empresa pot tenir més d’un tipus de SD-WAN funcionant, tot dependrà del tipus de negoci que estigui tractant.  
 Crec que per poder determinar el tipus de SD-WAN, ens hem de fer un seguit de preguntes referents sobretot al negoci / negocis que tenim i el que implica poder disposar d’un tipus o un altre de SD-WAN. Aquestes preguntes aniran molt enfocades a la situació actual en què ens trobem. Per exemple, per una empresa que tingui moltes seus connectades amb línies punt a punt i la sortida Internet centralitzada a la Seu Central igual que els dispositius de seguretat, algunes de les preguntes que ens hauríem de plantejar són:  
-- Com s’estan administrant actualment les connectivitats de totes aquestes seus, d’una forma centralitzada o no?  
-- A nivell d’ocupació de les línies, quina part d’aquestes esta ocupada per tràfic “il·lícit”, que després es tallarà a la Seu Central?  
-- Quin tipus de seguretat necessitaria implementar a la pròpia seu, a nivell de connectivitat?  
-- Tinc serveis sensibles (aplicacions en temps real crítiques) que passin per aquestes línies?  
-- Necessito integrar la gestió / administració de la SD-WAN amb la LAN?  
+
+- Com s’estan administrant actualment les connectivitats de totes aquestes seus, d’una forma centralitzada o no?
+
+- A nivell d’ocupació de les línies, quina part d’aquestes esta ocupada per tràfic “il·lícit”, que després es tallarà a la Seu Central?
+
+- Quin tipus de seguretat necessitaria implementar a la pròpia seu, a nivell de connectivitat?
+
+- Tinc serveis sensibles (aplicacions en temps real crítiques) que passin per aquestes línies?
+
+- Necessito integrar la gestió / administració de la SD-WAN amb la LAN?
+
 - En cas que l'ocupació de les línies sigui molt elevada, a quin nivell he de poder garantir cert tràfic (aplicació, usuari, etc.)?
-Depenent de la resposta que donem a  aquestes qüestions, podrem determinar si ens interessa tenir una SD-WAN que prioritzi la seguretat de les Seus, una que prioritzi tot el tema de Routing, una que convergeixi la WAN i la LAN o simplement una combinació d’aquestes (diferenciant grups de Seus per tipus de SD-WAN a aplicar).  
+  
+Depenent de la resposta que donem a  aquestes qüestions, podrem determinar si ens interessa tenir una SD-WAN que prioritzi la seguretat de les Seus, una que prioritzi tot el tema de Routing, una que convergeixi la WAN i la LAN o simplement una combinació d’aquestes (diferenciant grups de Seus per tipus de SD-WAN a aplicar). 
 
 ## I què passa amb les meves connexions WAN?
 
