--- a/content/blog/2018/11/201812SDWAN.md
+++ b/content/blog/2018/11/201812SDWAN.md
@@ -117,9 +117,12 @@ Un altre tendència a nivell de línies podria ser utilitzar línies de baix cos
 Dins dels diferents tipus / aproximacions a SD-WAN, en el mercat ens podem trobar un cas particular que es basa en connectar totes les seus, inclosa la central, a un determinat núvol.  
 La connexió entre les diferents seus es faria a través d’aquets núvol on hi haurien els serveis necessaris ( seguretat, balanceig, etc. ). Com en els casos anteriors, l’administració es faria de forma centralitzada però en la majoria de casos en el propi núvol.
 Tot i que podria ser una opció valida per poder connectar les seus de la nostra organització, podríem com a mínim dubtar si la podem tractar com un tipus de SD-WAN o no, tenint present que:  
-- Ens estem lligant a un proveïdor, en aquest cas el del núvol que triem  
-- La majoria de serveis que s’apliquen són centralitzats en el núvol, no en cadascuna de les seus per separat. Hi haurà seus que ens interessi aplicar uns determinats serveis en la sortida/entrada de la pròpia seu, estalviant-nos així problemes de seguretat i de accessibilitat, no consumint línia amb tràfic que considerem il·lícit.  
-- Pel que fa a la visibilitat i automatització, estarem lligats a la que ens ofereixi el propi núvol  
+
+- Ens estem lligant a un proveïdor, en aquest cas el del núvol que triem.
+  
+- La majoria de serveis que s’apliquen són centralitzats en el núvol, no en cadascuna de les seus per separat. Hi haurà seus que ens interessi aplicar uns determinats serveis en la sortida/entrada de la pròpia seu, estalviant-nos així problemes de seguretat i de accessibilitat, no consumint línia amb tràfic que considerem il·lícit.
+
+- Pel que fa a la visibilitat i automatització, estarem lligats a la que ens ofereixi el propi núvol.
 
 Tenint present això, caldria que cadascú determinés si al seu entendre aquests tipus de connexions es pot considerar SD-WAN o no.  
 
