--- a/content/blog/2018/11/201812SDWAN.md
+++ b/content/blog/2018/11/201812SDWAN.md
@@ -1,7 +1,7 @@
 +++
 date        = "2018-11-28"
 title       = "SD-WAN"
-description = "Fonaments de les SD-WAN per doomies"
+description = "Fonaments de les SD-WAN per dummies"
 responsable = "Unitat d'arquitectura"
 sections    = ["Blog", "home"]
 blog_tags   = ["SD-WAN","SDN","Comunicacions"]
