--- a/content/comunicat/2019/01.md
+++ b/content/comunicat/2019/01.md
@@ -8,7 +8,7 @@ key 		  	    = "GENER2019"
 [grafica]
 titol      = "SIC. Acumulat Aplicacions al Git"
 descripcio = "Evolució de les aplicacions que tenen custodiat el seu codi font al Git del SIC"
-imatge     = "git_acumulat_aplicacions.png"
+imatge     = "evolucio-git-2017-2018.png"
 alt        = "SIC. Acumulat Aplicacions al Git"
 
 +++
