--- a/content/comunicat/2019/02.md
+++ b/content/comunicat/2019/02.md
@@ -1,9 +1,9 @@
 +++
 title           = "Comunicat"
-date	 	  	    = "2019-01-09"
+date	 	  	    = "2019-02-04"
 nombrenoticies  = 1
 nombredestacats = 2
-key 		  	    = "GENER2019"
+key 		  	    = "FEBRER2019"
 
 [grafica]
 titol      = "SIC. Acumulat Aplicacions al Git"
