Canvi descripció howto

--- a/content/comunicat/2019/03.md
+++ b/content/comunicat/2019/03.md
@@ -7,7 +7,7 @@ key 		  	    = "MARC2019"
 
 [[relacionats]]
 doctitle          = "HowTo Definició sondes per aplicacions Canigó a AppAgile"
-docdescription    = "HowTo on es descriu com configurar sondes de health en aplicacions Canigó desplegades a AppAgile"
+docdescription    = "HowTo on es descriu com configurar sondes de health en aplicacions Canigó que s'hagin de desplegar a AppAgile"
 docurl            = "/howtos/2019-03-HowTo-Definicio-sondes-aplicacions-Canigo-AppAgile/"
 doctype           = "HTML"
 +++
