--- a/content/comunicat/2019/04.md
+++ b/content/comunicat/2019/04.md
@@ -2,12 +2,12 @@
 title           = "Comunicat"
 date	 	  	    = "2019-03-25"
 nombrenoticies  = 2
-nombredestacats = 2
+nombredestacats = 3
 key 		  	    = "ABRIL2019"
 
 [[relacionats]]
-doctitle          = "HowTo Tests unitaris amb programació reactiva a Canigó 3.4"
-docdescription    = "HowTo Tests unitaris amb programació reactiva a Canigó 3.4"
-docurl            = "TODO"
+doctitle          = "Test unitaris amb programació reactiva a Canigó 3.4"
+docdescription    = "Aquest how-to va dirigit a tots aquells perfils tècnics que tinguin la necessitat de crear test unitaris a Streams reactius proporcionats a la versió 3.4.0 de Canigó"
+docurl            = "/howtos/2019-03-Howto-Test_unitaris_programacio_reactiva_canigo_3_4/"
 doctype           = "HTML"
 +++
